# libckit

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
include/ckit/: atomic.h  ckit.h  debug.h  event.h  hash.h  hashtable.h  heap.h  list.h  log.h  pbuf.h  rbtree.h  signal.h  time.h  timer.h
jni/: Android.mk  Application.mk
src/: Android.mk  Makefile.am  debug.c  event_epoll.c  event_kqueue.c  hashtable.c  heap.c  log.c  pbuf.c  rbtree.c  signal.c  timer.c
